make sure location filter form blocks are aligned properly

--- a/landscape/dark.scss
+++ b/landscape/dark.scss
@@ -219,6 +219,7 @@ $groupButtonHoverColor: rgba(255,255,255,0.2);
     .form-block {
       @include boxedUp;
       display:inline-block;
+      vertical-align:top;
       }
     .form-block + .form-block {
       padding-left:$mainGutter/2;
